# kiratech-assignment

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: image-builder-dev.yml
podman/: .dockerignore  Dockerfile
src/: db.sqlite3
src/inventory/: tests.py  urls.py  views.py
src/inventory/migrations/: 0001_initial.py
src/inventory/static/inventory/: interface.js
src/inventory/templates/: detail.html  list.html
src/kiratech/: settings.py  urls.py
src/kiratech_assignment/: hello.py  pyproject.toml  settings.py  urls.py  wsgi.py
src/kiratech_assignment/inventory/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/kiratech_assignment/inventory/migrations/: 0001_initial.py
